# issue_86

./: .cmake-format  CMakeLists.txt
lib/: .todo
lib/kseq/: CMakeLists.txt
lib/kseq/include/kseq/: kseq.h
lib/kseq/test/: .todo
test/: CMakeLists.txt
test/source/: test_kseq.cpp
